総学習時間などを返すエンドポイントを作成
