# app/users/views.py
@@ -18,3 +18,20 @@ class UserAPIView(APIView):
         """Delete the user."""
         request.user.delete()
         return Response(status=status.HTTP_204_NO_CONTENT)
+
+
+class UserMyDataAPIView(APIView):
+    """Define the UserMyDataAPIView class."""
+
+    permission_classes: ClassVar = [IsAuthenticated]
+
+    def get(self, request: Request) -> Response:
+        """Get the user profile."""
+        user = request.user
+        data = {
+            "id": user.id,
+            "total_achieved_minutes": user.total_achieved_minutes(),
+            "total_challenge_amount": user.total_challenge_amount(),
+            "total_loss_amount": user.total_loss_amount(),
+        }
+        return Response(data, status=status.HTTP_200_OK)
